@@ -1,114 +1,176 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>com.dinstone.grape</groupId>
-		<artifactId>grape-all</artifactId>
-		<version>1.3.1</version>
-	</parent>
-	<artifactId>grape-server</artifactId>
-	<properties>
-		<slf4j.version>1.7.36</slf4j.version>
-		<log4j.version>2.20.0</log4j.version>
-		<vertx.version>4.2.4</vertx.version>
-	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.dinstone.vertx</groupId>
-			<artifactId>vertx-web-assistant</artifactId>
-			<version>2.5.1</version>
-		</dependency>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.dinstone.grape</groupId>
+        <artifactId>grape-all</artifactId>
+        <version>1.3.1</version>
+    </parent>
+    <artifactId>grape-server</artifactId>
+    <properties>
+        <slf4j.version>1.7.36</slf4j.version>
+        <log4j.version>2.20.0</log4j.version>
+        <vertx.version>4.2.4</vertx.version>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.dinstone.vertx</groupId>
+            <artifactId>vertx-web-assistant</artifactId>
+            <version>2.5.1</version>
+        </dependency>
 
-		<!-- SLF4J API -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>${log4j.version}</version>
-		</dependency>
-		<!-- Log4j 2.x Implement -->
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
-			<version>${log4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>${log4j.version}</version>
-		</dependency>
+        <!-- SLF4J API -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <!-- Log4j 2.x Implement -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>com.dinstone.grape</groupId>
-			<artifactId>grape-core</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>com.dinstone.motor</groupId>
-				<artifactId>motor-maven-plugin</artifactId>
-				<version>1.2.0</version>
-				<configuration>
-					<includeBaseDirectory>true</includeBaseDirectory>
-					<launcher>
-						<properties>
-							<property>
-								<name>Xmn</name>
-								<value>128m</value>
-							</property>
-							<property>
-								<name>Xms</name>
-								<value>1g</value>
-							</property>
-							<property>
-								<name>Xmx</name>
-								<value>1g</value>
-							</property>
-							<property>
-								<name>launcher.listen.enabled</name>
-								<value>true</value>
-							</property>
-							<property>
-								<name>launcher.listen.port</name>
-								<value>4444</value>
-							</property>
-						</properties>
-					</launcher>
-					<application>
-						<activator>com.dinstone.grape.server.ApplicationActivator</activator>
-						<configs>
-							<config>
-								<directory>src/main/resources</directory>
-							</config>
-						</configs>
-						<resources>
-							<resource>
-								<directory>webroot</directory>
-							</resource>
-						</resources>
-					</application>
-				</configuration>
-				<executions>
-					<execution>
-						<id>launcher-package</id>
-						<phase>package</phase>
-						<goals>
-							<goal>publish</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+        <dependency>
+            <groupId>com.dinstone.grape</groupId>
+            <artifactId>grape-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.dinstone.motor</groupId>
+                <artifactId>motor-maven-plugin</artifactId>
+                <version>1.2.0</version>
+                <configuration>
+                    <includeBaseDirectory>true</includeBaseDirectory>
+                    <launcher>
+                        <properties>
+                            <property>
+                                <name>Xmn</name>
+                                <value>128m</value>
+                            </property>
+                            <property>
+                                <name>Xms</name>
+                                <value>1g</value>
+                            </property>
+                            <property>
+                                <name>Xmx</name>
+                                <value>1g</value>
+                            </property>
+                            <property>
+                                <name>launcher.listen.enabled</name>
+                                <value>true</value>
+                            </property>
+                            <property>
+                                <name>launcher.listen.port</name>
+                                <value>4444</value>
+                            </property>
+                        </properties>
+                    </launcher>
+                    <application>
+                        <activator>com.dinstone.grape.server.ApplicationActivator</activator>
+                        <configs>
+                            <config>
+                                <directory>src/main/resources</directory>
+                            </config>
+                        </configs>
+                        <resources>
+                            <resource>
+                                <directory>webroot</directory>
+                            </resource>
+                        </resources>
+                    </application>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>launcher-package</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>publish</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.3.2</version>
+                <configuration>
+                    <from>
+                        <image>openjdk:19-jdk-alpine</image>
+                    </from>
+                    <to>
+                        <image>192.168.1.120:5000/grape/${project.artifactId}</image>
+                        <tags>
+                            <tag>${project.version}</tag>
+                        </tags>
+                        <auth>
+                            <username>username</username>
+                            <password>password</password>
+                        </auth>
+                    </to>
+                    <extraDirectories>
+                        <paths>
+                            <path>
+                                <from>webroot</from>
+                                <into>/app/webroot</into>
+                            </path>
+                        </paths>
+                    </extraDirectories>
+                    <allowInsecureRegistries>true</allowInsecureRegistries>
+                    <container>
+                        <jvmFlags>
+                            <jvmFlag>-XX:+UseContainerSupport</jvmFlag>
+                            <jvmFlag>-XX:InitialRAMPercentage=10.0</jvmFlag>
+                            <jvmFlag>-XX:MinRAMPercentage=10.0</jvmFlag>
+                            <jvmFlag>-XX:MaxRAMPercentage=70.0</jvmFlag>
+                            <jvmFlag>-XX:+PrintGCDetails</jvmFlag>
+                            <jvmFlag>-Xloggc:/app/logs/gc.log</jvmFlag>
+                            <jvmFlag>-Djava.awt.headless=true</jvmFlag>
+                            <jvmFlag>-Duser.timezone=PRC</jvmFlag>
+                        </jvmFlags>
+                        <creationTime>${maven.build.timestamp}</creationTime>
+                        <workingDirectory>/app/</workingDirectory>
+                        <mainClass>com.dinstone.grape.server.GrapeLauncher</mainClass>
+                        <ports>
+                            <port>9595</port>
+                            <port>9521</port>
+                        </ports>
+                        <volumes>
+                            <volume>/app/resources</volume>
+                            <volume>/app/logs</volume>
+                        </volumes>
+                    </container>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                            <!-- <goal>buildTar</goal> -->
+                            <!-- <goal>dockerBuild</goal> -->
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
